Added:  -Sinch library  -Sinch java files  -Edited Sinch java files  -Changed edit text on homepage to text view

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        /*
+        old import command needed for chateau, not needed for sinch
         maven { url "https://jitpack.io" }
+         */
     }
 }
 
