--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,12 +16,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".CreateSession" />
-        <activity android:name=".JoinSession"></activity>
+        <activity android:name=".JoinSession" />
+
         <uses-permission android:name="android.permission.INTERNET" />
         <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
         <uses-permission android:name="android.permission.RECORD_AUDIO" />
         <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
         <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+        <activity android:name=".UserQuestion"></activity>
     </application>
 
 </manifest>
